--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-python==3.8.10
 Flask==2.1.2
 pandas==1.3.5
 numpy==1.21.2
 gunicorn==20.1.0
+Werkzeug==2.1.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
