--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-Flask==2.1.2
-pandas==1.3.5
-gunicorn==20.1.0
-Werkzeug==2.1.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
+blinker==1.8.1
+click==8.1.7
+flask==3.0.3
+importlib.metadata==7.1.0
+itsdangerous==2.2.0
+jinja2==3.1.3
+MarkUpSafe==2.1.5
+werkzeug==3.0.2
+zipp==3.18.1
+gunicorn
+
